Add cannonball item overlays